--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,9 @@
     padding-top: 15px;
 }
 
-.detailed-photo .favorite-button {
+.detailed-photo .star-button {
     cursor: pointer;
+    text-align: center;
     margin-bottom: 10px;
 }
 
